[package]
name = "scoundrel"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
anyhow = "1.0.99"
thiserror = "2.0.16"
rand = "0.9.2"
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
